Refactor Vercel configuration and Vite build settings; add error handling route in app. Updated vercel.json for improved routing and build configuration, including static file handling. Modified vite.config.js to specify output directory and rollup options. Enhanced routes.jsx to include a catch-all error boundary for better user experience.

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,35 @@
 {
+  "version": 2,
   "routes": [
+    { "handle": "filesystem" },
     {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "/robots.txt",
+      "dest": "/robots.txt"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
-  "headers": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "s-maxage=1, stale-while-revalidate" }
-      ]
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ]
 } 
