--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,11 @@
       "dest": "/static/$1"
     },
     {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
+      "src": "/chef-hat.svg",
+      "dest": "/chef-hat.svg",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/manifest.json",
